WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39859
ScrollView::setFrameRect should not call contentsResized when there is a fixed layout size
https://bugs.webkit.org/show_bug.cgi?id=39859
Summary
ScrollView::setFrameRect should not call contentsResized when there is a fixe...
Adam Treat
Reported
2010-05-27 18:55:26 PDT
Layout is not dependent upon the frameRect when using fixed layout size therefore we should not cause a layout with this
Attachments
Patch
(1.13 KB, patch)
2010-05-28 10:47 PDT
,
Adam Treat
dbates
: review+
dbates
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Treat
Comment 1
2010-05-28 10:47:14 PDT
Created
attachment 57343
[details]
Patch
Daniel Bates
Comment 2
2010-05-28 10:53:22 PDT
Comment on
attachment 57343
[details]
Patch
> diff --git a/WebCore/ChangeLog b/WebCore/ChangeLog > index a63213f..7c99717 100644 > --- a/WebCore/ChangeLog > +++ b/WebCore/ChangeLog > @@ -1,3 +1,15 @@ > +2010-05-28 Adam Treat <
atreat@rim.com
> > + > + Reviewed by Daniel Bates. > + > + Bug #293 and
https://bugs.webkit.org/show_bug.cgi?id=39859
> + > + Layout is not dependent upon ScrollView::frameRect when useFixedLayout > + is true. No reason to set the needs layout flag in this case. > + > + * platform/ScrollView.cpp: > + (WebCore::ScrollView::wheelEvent):
This change log disagrees with both the patch and the description since ScrollView::wheelEven was not modified. Looks sane to me. r=me.
Adam Treat
Comment 3
2010-05-28 10:56:32 PDT
Landed with
r60367
WebKit Review Bot
Comment 4
2010-05-28 11:47:51 PDT
http://trac.webkit.org/changeset/60367
might have broken Tiger Intel Release The following changes are on the blame list:
http://trac.webkit.org/changeset/60368
http://trac.webkit.org/changeset/60369
http://trac.webkit.org/changeset/60370
http://trac.webkit.org/changeset/60366
http://trac.webkit.org/changeset/60367
Adam Barth
Comment 5
2010-05-28 11:52:50 PDT
cfleizach fixed the break in
http://trac.webkit.org/changeset/60372
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug