RIM Bug #293 and https://bugs.webkit.org/show_bug.cgi?id=39859

Patch by Adam Treat <atreat@rim.com> on 2010-05-28
Reviewed by Daniel Bates.

Layout is not dependent upon ScrollView::frameRect when useFixedLayout
is true.  No reason to set the needs layout flag in this case.

* platform/ScrollView.cpp:
(WebCore::ScrollView::setFrameRect):

Canonical link: https://commits.webkit.org/51410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60367 268f45cc-cd09-0410-ab3c-d52691b4dbfc